New entries should be added at the top

2005-01-06 Add patch from Ben Vanhaeren to make the FigureManagerGTK vbox a
           public attribute - SC

====================================================================
2004-12-30 Release 0.70

2004-12-28 Added coord location to key press and added a
           examples/picker_demo.py

2004-12-28 Fixed coords notification in wx toolbar - JDH

2004-12-28 Moved connection and disconnection event handling to the
           FigureCanvasBase.  Backends now only need to connect one
           time for each of the button press, button release and key
           press/release functions.  The base class deals with
           callbacks and multiple connections.  This fixes flakiness
           on some backends (tk, wx) in the presence of multiple
           connections and/or disconnect - JDH

2004-12-27 Fixed PS mathtext bug where color was not set - Jochen
           please verify correct - JDH

2004-12-27 Added Shadow class and added shadow kwarg to legend and pie
           for shadow effect - JDH

2004-12-27 Added pie charts and new example/pie_demo.py

2004-12-23 Fixed an agg text rotation alignment bug, fixed some text
           kwarg processing bugs, and added examples/text_rotation.py
           to explain and demonstrate how text rotations and alignment
           work in matplotlib. - JDH

======================================================================

2004-12-22 0.65.1 released - JDH

2004-12-22 Fixed colorbar bug which caused colorbar not to respond to
           changes in colormap in some instances - JDH

2004-12-22 Refactored NavigationToolbar in tkagg to support app
           embedding , init now takes (canvas, window) rather than
           (canvas, figman) - JDH

2004-12-21 Refactored axes and subplot management - removed
           add_subplot and add_axes from the FigureManager.  classic
           toolbar updates are done via an observer pattern on the